[gd_scene load_steps=5 format=3 uid="uid://b463n2ua5mcrw"]

[ext_resource type="Theme" uid="uid://dofvdjc4ba08v" path="res://assets/UI/UIassets/theme.tres" id="1_glqc6"]
[ext_resource type="Script" uid="uid://b133s7xd8aao6" path="res://source/ui/shop_item.gd" id="1_y5tdm"]
[ext_resource type="Texture2D" uid="uid://d22rquou04kpk" path="res://assets/UI/UIassets/blaster-f.png" id="2_wxfep"]
[ext_resource type="FontFile" uid="uid://cl6os7rp5p6r4" path="res://assets/UI/Font/Kenney Future Narrow.ttf" id="3_d8bsp"]

[node name="ShopItem" type="Control"]
custom_minimum_size = Vector2(240, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1034.0
offset_bottom = -410.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_y5tdm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 240.0
theme = ExtResource("1_glqc6")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 240.0
offset_right = 240.0
offset_bottom = 300.0
theme = ExtResource("1_glqc6")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_d8bsp")
theme_override_font_sizes/font_size = 24
text = "10 souls"

[node name="Upgrade" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Upgrade"]
layout_mode = 0
offset_left = 88.0
offset_top = 32.0
offset_right = 152.0
offset_bottom = 96.0
texture = ExtResource("2_wxfep")
stretch_mode = 1

[node name="ItemName" type="Label" parent="Upgrade"]
layout_mode = 0
offset_left = 41.0
offset_top = 80.0
offset_right = 199.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_d8bsp")
theme_override_font_sizes/font_size = 24
text = "Shop Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Upgrade"]
layout_mode = 0
offset_left = 16.0
offset_top = 100.0
offset_right = 216.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.838897, 0.838897, 0.838897, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_d8bsp")
theme_override_font_sizes/font_size = 18
text = "+Fire rate
+bullet speed
--damage"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Sold" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 42.0
offset_top = 97.5
offset_right = 198.0
offset_bottom = 142.5
theme = ExtResource("1_glqc6")
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 40
text = "Sold!"

[connection signal="pressed" from="Button" to="." method="_on_buyButton_pressed"]
